<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.topcutlawn.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_SignupFragment"
            app:destination="@id/SignupFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.topcutlawn.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_OtpFragment"
            app:destination="@id/OtpFragment" />

  <!--      <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />-->

    </fragment>

    <fragment
        android:id="@+id/OtpFragment"
        android:name="com.topcutlawn.Fragments.OtpVerification.OtpFragment"
        android:label="@string/otp_fragment_label"
        tools:layout="@layout/fragment_otp">

        <action
            android:id="@+id/action_OtpFragment_to_ResetPasswordFragment"
            app:destination="@id/ResetPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/ResetPasswordFragment"
        android:name="com.topcutlawn.Fragments.ResetPassword.ResetPasswordFragment"
        android:label="@string/resetpassword_fragment_label"
        tools:layout="@layout/fragment_reset_password">

        <action
            android:id="@+id/action_ResetPasswordFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>


    <fragment
        android:id="@+id/SignupFragment"
        android:name="com.topcutlawn.Fragments.SignupFragment.SignupFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_SignupFragment_to_SignupHomeFragment"
            app:destination="@id/SignupHomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/SignupHomeFragment"
        android:name="com.topcutlawn.Fragments.SignupHomeFragment.SignupHomeFragment"
        android:label="@string/signupHome_fragment_label"
        tools:layout="@layout/fragment_signup_home">

        <action
            android:id="@+id/action_SignupHomeFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.topcutlawn.Fragments.HomeFragment.HomeFragment"
        android:label="@string/Home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_FirstFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>


</navigation>