<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ResetPassword.ResetPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/imageebg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMenu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/back_icon" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/createnew"
                    android:textColor="@color/black"
                    android:textSize="23dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/enternewpassword"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/brown1"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/password"
                    android:textColor="@color/black1"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="0.1"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="0.9"
                        android:background="@null"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black2"
                        android:textSize="16dp" />

                    <ImageView
                        android:id="@+id/eye_pass"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:src="@drawable/eye_icon" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/mustbe"
                    android:textColor="@color/white3"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/cnfmpassword"
                    android:textColor="@color/black1"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="0.1"
                        android:src="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/et_cnfmpasswrod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="0.9"
                        android:background="@null"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black2"
                        android:textSize="16dp" />

                    <ImageView
                        android:id="@+id/eye_confirm_pass"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="0.1"
                        android:src="@drawable/eye_icon" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/bothpass"
                    android:textColor="@color/white3"
                    android:textSize="12dp" />


            </LinearLayout>


            <TextView
                android:id="@+id/tv_cnfmpass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/poppins_pegular"
                android:gravity="center"
                android:text="@string/verifynow"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </LinearLayout>

    </ScrollView>



</FrameLayout>