<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/llprofilee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/myprofile_icon" />

                <TextView
                    android:id="@+id/tvUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/myprofile"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llbooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivBank"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mybooking_icon" />

                <TextView
                    android:id="@+id/tvBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/mybooking"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llgallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivNotify"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/gallery_icon" />

                <TextView
                    android:id="@+id/tvNotify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/gallery"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llsupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivSetting"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/support_icon" />

                <TextView
                    android:id="@+id/tvSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/support"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lllogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivfollow"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logout_icon" />

                <TextView
                    android:id="@+id/tvfollow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_pegular"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

