<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/imageebg"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp">

                <ImageView
                    android:id="@+id/ivMenu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/back_icon"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="200dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resetpassword"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_pegular"
                        android:textSize="23dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/enteremail"
                        android:textColor="@color/brown1"
                        android:fontFamily="@font/poppins_pegular"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/emailaddress"
                        android:textColor="@color/white1"
                        android:fontFamily="@font/poppins_pegular"
                        android:textSize="15dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="60dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.1"
                            android:src="@drawable/forgotpass_icon"/>

                        <EditText
                            android:id="@+id/etemailaddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_marginHorizontal="10dp"
                            android:background="@null"
                            android:singleLine="true"
                            android:text=""
                            android:fontFamily="@font/poppins_pegular"
                            android:textColor="@color/black"
                            android:textSize="15dp" />



                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginRight="60dp"
                        android:background="@color/white2" />

                    <TextView
                        android:id="@+id/send_otp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="60dp"
                        android:background="@drawable/button_background"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_pegular"
                        android:text="@string/sendotp"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>




</LinearLayout>